# CS431-Smart_Lecture_Q-A

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: video_metadata.json
docs/: system_report.latex
models/: README.md
rag/bm25/: __init__.py  bm25_index.py  setup_bm25.py
rag/db/: __init__.py  config.py  interface.py  pinecone_db.py
rag/db/milvus/: milvus_db.py
rag/embedding/: __init__.py  embedders.py
rag/query_engine/: __init__.py  gemini_client.py  query_engine.py
rag/reranker/: __init__.py  cross_encoder_reranker.py
services/api/: app.py
ui/: streamlit_app.py
